--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
     padding: 10px;
 }
 .todoeach{
-    width: 10%;
+    width: max-content;
     height: max-content;
     margin: 10px;
     padding: 10px;
@@ -112,7 +112,7 @@ body{
         padding: 10px;
     }
     .todoeach{
-        width: 10%;
+        width: max-content;
         height: max-content;
         margin: 10px;
         padding: 10px;
@@ -138,18 +138,18 @@ body{
         margin: 40px;
         padding: 10px;
     }
+    .display{
+        display: flex;
+        flex-wrap: wrap;
+        margin: 40px;
+        padding: 10px;
+    }
     .todoeach{
-        width: 10%;
+        width: max-content;
         height: max-content;
         margin: 10px;
         padding: 10px;
         background: rgb(255, 255, 255);
         border-radius: 15%;
     }
-    .todocontainer{
-        height: max-content;
-        margin-top: 20px;
-        width: 50%;
-        margin-left: 10px;
-     }
 }
